updated section names of index

--- a/views/index.html
+++ b/views/index.html
@@ -2,36 +2,31 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="/css/stylesheet.css">
-
+<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<script src="../public/js/scrollingnav.js"></script>
-<script src="../public/js/windowheight.js"></script>
-
+<script src="javascript/scrollingnav.js"></script>
+<script src="javascript/windowheight.js"></script>
 <link rel="shortcut icon" type="image/png" href="img/coralfavicon.png"/>
-
 <title>Jamie Pilgrim | I'll Bring the Donuts </title>
 <!-- [if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"> </script><![end if]-->
 </head>
 
+<body>  
+<nav>
+  <a href="#"><img id="logo" src="img/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
+  <ul>
+    <li><a href="#about"> About </a></li>
+    <li><a href="#projects"> Projects </a></li>
+    <li><a href="#"><img src="img/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
+    <li><a href="#resume"> Resume </a></li>
+    <li><a href="#contact"> Contact </a></li>
+  </ul>
+</nav>
+<section class="module parallax" id="parallax-1">
+  <div class="container"></div>
+</section>
 
-<body> 
-<header> 
-  <nav>
-    <a href="#"><img id="logo" src="../public/imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
-    <ul>
-      <li><a href="#about"> About </a></li>
-      <li><a href="#projects"> Projects </a></li>
-      <li><a href="#"><img src="img/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
-      <li><a href="#experience"> Experience </a></li>
-      <li><a href="#contact"> Contact </a></li>
-    </ul>
-  </nav>
-  <section class="module parallax" id="parallax-1">
-    <div class="container"></div>
-  </section>
-</header>
 <a name ="about">
 <section class="module content">
   <div class="container row">
@@ -42,8 +37,6 @@
     <p> I make web apps that are both beautiful and functional, inside and out. With a strong background in design paired with an ever growing technical skillset, my creativity knows no bounds.  </p>
     <p> Currently located in Chicago, after I relocated to attend Dev Bootcamp, I am always looking for new opportunities while I freelance.  </p>
 
-    
-
 
   </div>
 </section>
@@ -51,18 +44,13 @@
 <a name ="projects">
 <section class="module content">
   <div class="container">
-    <h2> Projects </h2>
+    <h2> Projects & Work </h2>
     <p class="center"> Coming Soon </p>
-
-    <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
-    <ul>
-      <li id="raft"><a href=""><img src="" alt=""></a></li>
-      <li id="humblehearts"><a href=""><img src="" alt=""></a></li>
-      <li id="fetch"><a href=""><img src="" alt=""></a></li>
-      <li id="games"><a href=""><img src="" alt=""></a></li>
-      <li id="blog"><a href=""><img src="" alt=""></a></li>
-      <li id="metaoverflow"><a href=""><img src="" alt=""></a></li>
-    </ul>
+<!--     <ul>
+      <li> Raft </li>
+      <li> Humble Hearts </li>
+      <li> 
+    </ul> -->
   <a name ="resume">
   </div>
 </section>
