updated image paths

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,10 +6,10 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-<script src="../public/js/scrollingnav.js"></script>
-<script src="../public/js/windowheight.js"></script>
+<script src="js/scrollingnav.js"></script>
+<script src="js/windowheight.js"></script>
 
-<link rel="shortcut icon" type="image/png" href="img/coralfavicon.png"/>
+<link rel="shortcut icon" type="image/png" href="imgs/coralfavicon.png"/>
 
 <title>Jamie Pilgrim | I'll Bring the Donuts </title>
 <!-- [if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"> </script><![end if]-->
@@ -19,11 +19,11 @@
 <body> 
 <header> 
   <nav>
-    <a href="#"><img id="logo" src="../public/imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
+    <a href="#"><img id="logo" src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
     <ul>
       <li><a href="#about"> About </a></li>
       <li><a href="#projects"> Projects </a></li>
-      <li><a href="#"><img src="img/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
+      <li><a href="#"><img src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
       <li><a href="#experience"> Experience </a></li>
       <li><a href="#contact"> Contact </a></li>
     </ul>
@@ -71,8 +71,7 @@
 <section class="module parallax" id="parallax-2">
   <div class="container">
 
-    <figure id="resume"><a href="img/JamiePilgrimResume2015.pdf" target="_blank"><img src="img/JamiePilgrimResume2015.jpg"></a></figure>
-    
+
   </div>
 </section>
 
@@ -91,19 +90,19 @@
       <h4> &copy; 2015 Jamie Pilgrim </h4>
       <ul>
         <li><a href="http://www.twitter.com/pilgrimmemoirs" target="_blank">
-          <img src="img/twitter.png"></a>
+          <img src="imgs/twitter.png"></a>
         </li>
         <li><a href="http://www.github.com/pilgrimmemoirs" target="_blank">
-          <img src="img/github-2.png"></a>
+          <img src="imgs/github-2.png"></a>
         </li>
         <li><a href="https://dribbble.com/bringingdonuts" target="_blank">
-          <img src="img/dribbble.png"></a>
+          <img src="imgs/dribbble.png"></a>
         </li>
         <li><a href="http://www.linkedin.com/in/jamiepilgrim" target="_blank">
-          <img src="img/linkedin.png"></a>
+          <img src="imgs/linkedin.png"></a>
         </li>
         <li><a href="mailto:hello@jamiepilgrim.com" target="_blank">
-          <img src="img/email.png"></a>
+          <img src="imgs/email.png"></a>
         </li>
       </ul>
     </footer> 
