--- a/views/index.erb
+++ b/views/index.erb
@@ -52,16 +52,17 @@
 <section class="module content">
   <div class="container">
     <h2> Projects </h2>
-    <p class="center"> Coming Soon </p>
+
+    <p> These are sites that were built during a hackathon or my time studying development at Dev Bootcamp. </p>
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
-    <ul>
-      <li id="raft"><a href=""><img src="" alt=""></a></li>
-      <li id="humblehearts"><a href=""><img src="" alt=""></a></li>
-      <li id="fetch"><a href=""><img src="" alt=""></a></li>
-      <li id="games"><a href=""><img src="" alt=""></a></li>
+    <ul id="projects">
+      <li id="raft" ><a href="http://raft.herokuapp.com" target="_blank">Raft<!-- <img src="" alt=""> --></a></li>
+      <li id="humblehearts"><a href="http://humblehearts.herokuapp.com" target="_blank">Humble Hearts<!-- <img src="" alt=""> --></a></li>
+      <li id="fetch"><a href="https://github.com/PilgrimMemoirs/DBC_Metaoverflow" target="_blank">Metaoverflow<!-- <img src="" alt=""> --></a></li>
+<!--       <li id="games"><a href=""><img src="" alt=""></a></li>
       <li id="blog"><a href=""><img src="" alt=""></a></li>
-      <li id="metaoverflow"><a href=""><img src="" alt=""></a></li>
+      <li id="metaoverflow"><a href=""><img src="" alt=""></a></li> -->
     </ul>
   <a name ="resume">
   </div>
@@ -70,8 +71,9 @@
 
 <section class="module parallax" id="parallax-2">
   <div class="container">
+  <h2> Experience </h2>
 
-
+  <h4> <a href="imgs/JamiePilgrimResume2015.pdf" target="_blank">Download Resume</a> </h4>
   </div>
 </section>
 
