--- a/views/index.erb
+++ b/views/index.erb
@@ -18,18 +18,22 @@
 
 <body> 
 <header> 
-  <nav>
-    <a href="#"><img id="logo" src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
-    <ul>
-      <li><a href="#about"> About </a></li>
-      <li><a href="#projects"> Projects </a></li>
-      <li><a href="#"><img src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
-      <li><a href="#experience"> Experience </a></li>
-      <li><a href="#contact"> Contact </a></li>
-    </ul>
-  </nav>
+  <%  if !@message %>
+    <nav>
+      <a href="#"><img id="logo" src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
+      <ul>
+        <li><a href="#about"> About </a></li>
+        <li><a href="#projects"> Projects </a></li>
+        <li><a href="#"><img src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
+        <li><a href="#experience"> Experience </a></li>
+        <li><a href="#contact"> Contact </a></li>
+      </ul>
+    </nav>
+  <%end%>
   <section class="module parallax" id="parallax-1">
-    <div class="container"></div>
+    <div class="container">
+      <h2><%=  @message if @message %></h2>
+    </div>
   </section>
 </header>
 <a name ="about">
@@ -57,8 +61,8 @@
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
     <ul id="projects">
-      <li id="raft" ><a href="http://raft.herokuapp.com" target="_blank">Raft<!-- <img src="" alt=""> --></a></li>
       <li id="humblehearts"><a href="http://humblehearts.herokuapp.com" target="_blank">Humble Hearts<!-- <img src="" alt=""> --></a></li>
+      <li id="raft" ><a href="http://raft.herokuapp.com" target="_blank">Raft<!-- <img src="" alt=""> --></a></li>
       <li id="fetch"><a href="https://github.com/PilgrimMemoirs/DBC_Metaoverflow" target="_blank">Metaoverflow<!-- <img src="" alt=""> --></a></li>
 <!--       <li id="games"><a href=""><img src="" alt=""></a></li>
       <li id="blog"><a href=""><img src="" alt=""></a></li>
@@ -80,11 +84,14 @@
 <a name ="contact">
 <section class="module content">
   <div class="container">
-  <h2> Contact </h2>
+    <h2> Contact </h2>
 
-  <p class="center"> hello@jamiepilgrim.com </p>
-
-
+    <form action='/contact' method="post">
+      <input type="text" name="name" placeholder="Name">
+      <input type="text" name="mail" placeholder="Email">
+      <textarea name="body" placeholder="Your Message Here"></textarea>
+      <input type="submit" value="Send">
+    </form>
   </div>
 </section>
 
