--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -213,6 +213,9 @@ section.module {
 /* ============================================================
     Contact Form
 ============================================================ */
+#email {
+  text-align: center;
+}
 
 form {
   width: 350px;
