--- a/views/index.erb
+++ b/views/index.erb
@@ -86,12 +86,16 @@
   <div class="container">
     <h2> Contact </h2>
 
-    <form action='/contact' method="post">
+<!--     <form action='/contact' method="post">
       <input type="text" name="name" placeholder="Name">
       <input type="text" name="mail" placeholder="Email">
       <textarea name="body" placeholder="Your Message Here"></textarea>
       <input type="submit" value="Send">
-    </form>
+    </form> -->
+
+    <h4> Email me: </h4>
+    <p id="email"> <a href="mailto:hello@jamiepilgrim.com?subject=Let's Get Donuts&body=Please leave your name, contact details and message after the tone and I will get back to you shortly. *beeeep*!
+"> hello@jamiepilgrim.com </a> </p>
   </div>
 </section>
 
