aligned anchor tags to section better

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,7 +23,7 @@
       <a href="#"><img id="logo" src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a>
       <ul>
         <li><a href="#about"> About </a></li>
-        <li><a href="#projects"> Projects </a></li>
+        <li><a href="#project"> Projects </a></li>
         <li><a href="#"><img src="imgs/simplelogo.png" alt="Donut Logo" height="75" width="75"></a><li>
         <li><a href="#experience"> Experience </a></li>
         <li><a href="#contact"> Contact </a></li>
@@ -44,15 +44,14 @@
     <h4 class="center"> Web Developer & Designer </h4>
 
     <p> I make web apps that are both beautiful and functional, inside and out. With a strong background in design paired with an ever growing technical skillset, my creativity knows no bounds.  </p>
+<!-- projects anchor tag so content displays below nav -->
+<a name ="project">
     <p> Currently located in Chicago, after I relocated to attend Dev Bootcamp, I am always looking for new opportunities while I freelance.  </p>
-
-    
-
 
   </div>
 </section>
 
-<a name ="projects">
+
 <section class="module content">
   <div class="container">
     <h2> Projects </h2>
@@ -68,7 +67,7 @@
       <li id="blog"><a href=""><img src="" alt=""></a></li>
       <li id="metaoverflow"><a href=""><img src="" alt=""></a></li> -->
     </ul>
-  <a name ="resume">
+  <a name ="experience">
   </div>
 </section>
 
