--- a/views/index.erb
+++ b/views/index.erb
@@ -107,9 +107,9 @@
         <li><a href="http://www.github.com/pilgrimmemoirs" target="_blank">
           <img src="imgs/github-2.png"></a>
         </li>
-        <li><a href="https://dribbble.com/bringingdonuts" target="_blank">
+<!--         <li><a href="https://dribbble.com/bringingdonuts" target="_blank">
           <img src="imgs/dribbble.png"></a>
-        </li>
+        </li> -->
         <li><a href="http://www.linkedin.com/in/jamiepilgrim" target="_blank">
           <img src="imgs/linkedin.png"></a>
         </li>
