started new, grid style for list of projects

--- a/views/index.erb
+++ b/views/index.erb
@@ -53,18 +53,18 @@
 
 
 <section class="module content">
-  <div class="container">
+  <div class="container" id="projects">
     <h2> Projects </h2>
 
     <p> These are sites that were built during a hackathon or my time studying development at Dev Bootcamp. </p>
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
-    <ul id="projects">
+    <ul id="project-list">
       <li id="humblehearts"><a href="http://humblehearts.herokuapp.com" target="_blank">Humble Hearts<!-- <img src="" alt=""> --></a></li>
       <li id="raft" ><a href="http://raft.herokuapp.com" target="_blank">Raft<!-- <img src="" alt=""> --></a></li>
       <li id="fetch"><a href="https://github.com/PilgrimMemoirs/DBC_Metaoverflow" target="_blank">Metaoverflow<!-- <img src="" alt=""> --></a></li>
-<!--       <li id="games"><a href=""><img src="" alt=""></a></li>
-      <li id="blog"><a href=""><img src="" alt=""></a></li>
+      <li id="tictac"><a href="">Tic-Tac-Toe<!-- img src="" alt=""> --></a></li>
+     <!-- <li id="blog"><a href=""><img src="" alt=""></a></li>
       <li id="metaoverflow"><a href=""><img src="" alt=""></a></li> -->
     </ul>
   <a name ="experience">
