--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -192,21 +192,40 @@ section.module {
 /* ============================================================
     Project List
 ============================================================ */
-#projects {
-  width: 50%;
+#projects:after {
+  /* clearfix hack */
+  content: "";
   display: table;
+  clear: both;
+}
+#project-list {
+  width: 50%;
+/*  display: table;*/
   list-style-type: none;
   margin: 0 auto;
 }
 
-#projects li{
-  display: table-cell;
+#project-list li{
+/*  display: table-cell;*/
+  float:right;
   text-align: center;
-  padding-right: 20px;
+  padding-left: .5em;
   font-size: 1.5em;
+  display: inline-block;
+  background-color: #102342;
+  border: .5em solid white;
+  width: 40%;
+  height: 3em;
+
 }
 
-#projects li a {
+#project-list li:nth-child(4n){
+  clear: both;
+}
+
+
+
+#project-list li a {
   display: block;
 }
 
