New title/header

--- a/views/index.erb
+++ b/views/index.erb
@@ -33,6 +33,8 @@
   <section class="module parallax" id="parallax-1">
     <div class="container">
       <h2><%=  @message if @message %></h2>
+      <h3> Portfolio site of </h3>
+      <h1> Jamie Pilgrim </h1>
     </div>
   </section>
 </header>
@@ -40,10 +42,11 @@
 <section class="module content">
   <div class="container row">
 
-    <h2> Hi! <br>  I'm Jamie! </h2>
-    <h4 class="center"> Web Developer & Designer </h4>
+<!--     <h2> Hi! <br>  I'm Jamie! </h2> -->
+    <h4> Farm Raised, Free Range </h2>
+    <h3 class="center"> Web Developer & Designer </h3>
 
-    <p> I make web apps that are both beautiful and functional, inside and out. With a strong background in design paired with an ever growing technical skillset, my creativity knows no bounds.  </p>
+    <p>   </p>
 <!-- projects anchor tag so content displays below nav -->
 <a name ="project">
     <p> Currently located in Chicago, after I relocated to attend Dev Bootcamp, I am always looking for new opportunities while I freelance.  </p>
