--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -31,6 +31,7 @@ figure img{
 h1, h2, h3, h4 {
   color: #102342;
   text-align: center;
+  font-family: 'Sansita One', sans-serif;
 }
 
 p, ul li {
