--- a/views/index.erb
+++ b/views/index.erb
@@ -43,10 +43,10 @@
     <h2> Hi! <br>  I'm Jamie! </h2>
     <h4 class="center"> Web Developer & Designer </h4>
 
-    <p> I make web apps that are both beautiful and functional, inside and out. With a strong background in design paired with an ever growing technical skillset, my creativity knows no bounds.  </p>
+    <p>   </p>
 <!-- projects anchor tag so content displays below nav -->
 <a name ="project">
-    <p> Currently located in Chicago, after I relocated to attend Dev Bootcamp, I am always looking for new opportunities while I freelance.  </p>
+    <p> I am currently located in Chicago where I'll be teaching a pre-college web development programs through Flatiron School.   </p>
 
   </div>
 </section>
@@ -56,7 +56,7 @@
   <div class="container">
     <h2> Projects </h2>
 
-    <p> These are sites that were built during a hackathon or my time studying development at Dev Bootcamp. </p>
+    <p> These are sites that were built during a hackathon, for fun or durign my time studying web development at Dev Bootcamp. </p>
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
     <ul id="projects">
@@ -76,7 +76,7 @@
   <div class="container">
   <h2> Experience </h2>
 
-  <h4> <a href="imgs/JamiePilgrimResume2015.pdf" target="_blank">Download Resume</a> </h4>
+  <h4> <a href="imgs/jamiepilgrim_resume2015.pdf" target="_blank">Download Resume</a> </h4>
   </div>
 </section>
 
