added cats on code

--- a/views/index.erb
+++ b/views/index.erb
@@ -60,6 +60,7 @@
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
     <ul id="projects">
+    <li id="catsoncode"><a href="http://catsoncode.com" target="_blank">Cats on Code<!-- <img src="" alt=""> --></a></li>
       <li id="humblehearts"><a href="http://humblehearts.herokuapp.com" target="_blank">Humble Hearts<!-- <img src="" alt=""> --></a></li>
       <li id="raft" ><a href="http://raft.herokuapp.com" target="_blank">Raft<!-- <img src="" alt=""> --></a></li>
       <li id="fetch"><a href="https://github.com/PilgrimMemoirs/DBC_Metaoverflow" target="_blank">Metaoverflow<!-- <img src="" alt=""> --></a></li>
