--- a/views/index.erb
+++ b/views/index.erb
@@ -41,12 +41,14 @@
   <div class="container row">
 
     <h2> Hi! <br>  I'm Jamie! </h2>
-    <h4 class="center"> Web Developer & Designer </h4>
+    <h4 class="center"> Web Developer, Designer & Educator </h4>
 
     <p>   </p>
 <!-- projects anchor tag so content displays below nav -->
 <a name ="project">
-    <p> I am currently located in Chicago where I'll be teaching a pre-college web development programs through Flatiron School.   </p>
+    <p> I am currently located in Chicago where I'm spending the summer teaching pre-college web development programs through Flatiron School. I am looking for new opportunties at the begining of September, including full-time, freelance or contract work as a developer or instructor. </p>
+
+    <p> Other than coding I'm mostly finding the best donuts in the city & taking my cats for walks. #NoShame. </p>
 
   </div>
 </section>
@@ -56,7 +58,7 @@
   <div class="container">
     <h2> Projects </h2>
 
-    <p> These are sites that were built during a hackathon, for fun or durign my time studying web development at Dev Bootcamp. </p>
+    <p> My favorite sites that I have worked on since learning Development.   </p>
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
     <ul id="projects">
@@ -77,7 +79,7 @@
   <div class="container">
   <h2> Experience </h2>
 
-  <h4> <a href="imgs/jamiepilgrim_resume2015.pdf" target="_blank">Download Resume</a> </h4>
+  <h4> <a href="imgs/jamiepilgrim_2015resume.pdf" target="_blank">Download Resume</a> </h4>
   </div>
 </section>
 
@@ -94,7 +96,7 @@
     </form> -->
 
     <h4> Email me: </h4>
-    <p id="email"> <a href="mailto:hello@jamiepilgrim.com?subject=Let's Get Donuts&body=Please leave your name, contact details and message after the tone and I will get back to you shortly. *beeeep*!
+    <p id="email"> <a href="mailto:hello@jamiepilgrim.com?subject=Let's Get Donuts&body=Please leave your name, contact details and message and I will get back to you shortly. 
 "> hello@jamiepilgrim.com </a> </p>
   </div>
 </section>
