--- a/views/index.erb
+++ b/views/index.erb
@@ -46,9 +46,9 @@
     <p>   </p>
 <!-- projects anchor tag so content displays below nav -->
 <a name ="project">
-    <p> I am currently located in Chicago where I'm spending the summer teaching pre-college web development programs through Flatiron School. I am looking for new opportunties at the begining of September, including full-time, freelance or contract work as a developer or instructor. </p>
+    <p> A farm-raised, free range web developer, designer and educator. After years of traveling and studying design, I started to dabbling in development. It quickly turned into passion where I now find myself spending most of my waking hours planning, coding and teaching all things software engineering. </p>
 
-    <p> Other than coding I'm mostly finding the best donuts in the city & taking my cats for walks. #NoShame. </p>
+    <p> I am currently teaching at the Latin School of Chicago as a Computer Science teacher. I am also a Ruby on Rails instructor with Skillcrush and volunteer with several organizations around Chicago. </p>
 
   </div>
 </section>
@@ -58,7 +58,7 @@
   <div class="container">
     <h2> Projects </h2>
 
-    <p> My favorite sites that I have worked on since learning Development.   </p>
+    <p> A few examples of my personal projects.   </p>
 
     <!-- Show image, then on hover, blur background and show a title and short desc of project. Will be clickable to a popup w/ more info that will display links, who collaborated, the projects intentions and technologies -->
     <ul id="projects">
